--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <img src="shoppe recomendações.png" id="meio">
+    <img src="shoppe recomendações.png" class="meio">
   </body>
 </html:>
