--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html:>
   <head>
-  </head>
+  <link href="css/styles.css rel=stylesheet">
+</head>
   <body>
     <img src="shoppe recomendações.png" class="container">
   </body>
