--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <link href="css/styles.css rel=stylesheet">
 </head>
   <body>
-    <img src="shoppe recomendações.png" class="container">
+    <img src="shoppe recomendações.png" id="container">
   </body>
 </html:>
