--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html:>
   <head>
-  <link href="css/styles.css rel=stylesheet">
+  <link rel=stylesheet href="css/styles.css ">
 </head>
   <body>
     <img src="shoppe recomendações.png" id="container">
