--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <link rel=stylesheet href="css/styles.css">
 </head>
   <body>
-    <img src="shoppe recomendações.png" id="container">
+    <div class="container">
+    <img src="shoppe recomendações.png" class="image">
+    </div>
   </body>
 </html:>
