--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<html:>
-  <head>
-  <link rel=stylesheet href="css/styles.css">
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <script src='main.js'></script>
 </head>
-  <body>
-    <div class="container">
-    <img src="shoppe recomendações.png" class="image">
-    </div>
-  </body>
-</html:>
+<body>
+ <img src="shoppe recomendações.png"class=container>   
+</body>
+</html>
