--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src='main.js'></script>
 </head>
 <body>
- <img src="shoppe recomendações.png"class=container>   
+ <img src="shoppe recomendações.png"class=container>
+    <div class=container>
+        <h1>Recomendações para você!</h1>
+    </div>
 </body>
 </html>
