--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <img src="shoppe recomendações.png"class=container>
-    <div class=container>
+    <div class=testo>
         <h1>Recomendações para você!</h1>
     </div>
 </body>
