--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
  <img src="shoppe recomendações.png"class=container>
     <div class=testo>
-        <h1>Recomendações para você!</h1>
+        <h1>Recomendações para você.</h1>
     </div>
 </body>
 </html>
