--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -14,13 +15,8 @@
     </div>
     <div class=imagem>
 <a href="https://shopee.com.br/product/613677359/29569215689">
-<img src="https://down-br.img.susercontent.com/file/cn-11134207-7ras8-m36f22ifkanjba@resize_w450_nl.webp" ">
+<img src="https://down-br.img.susercontent.com/file/cn-11134207-7ras8-m36f22ifkanjba@resize_w450_nl.webp" id="roblox">
 </a>
-    </div>
-    <div class=imagem2>
-                <a href="https://shopee.com.br/product/874603044/23511983921">
-            <img scr="https://down-bs-br.img.susercontent.com/br-11134211-7r98o-lor192lx4tp1bd.webp">
-        </a>
     </div>
 </body>
 </html>
